<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activites.ClothesLoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backArrowImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.01999998"
                app:srcCompat="@drawable/ic_previous" />

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/backArrowImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@+id/backArrowImage"
                app:layout_constraintTop_toTopOf="@+id/backArrowImage" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="@color/white"
                android:textSize="@dimen/_26ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.078" />

            <TextView
                android:id="@+id/ezsilai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_to_ez_sial"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="@+id/signup"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/signup"
                app:layout_constraintTop_toBottomOf="@+id/signup" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_410sdp"
                android:layout_marginTop="90dp"
                android:background="@drawable/cardview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ezsilai"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="0dp">


                <EditText
                    android:id="@+id/emailLogin"
                    style="@style/customInput"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxEms="20"
                    app:layout_constraintBottom_toTopOf="@+id/signup_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.32" />

                <EditText
                    android:id="@+id/passwordLogin"
                    style="@style/customInput"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_key"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxEms="25"
                    app:layout_constraintEnd_toEndOf="@+id/emailLogin"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/emailLogin"
                    app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signup_btn"
                    style="@style/darkBlueButton"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:text="Sign In"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
                    app:layout_constraintHorizontal_bias="0.402"
                    app:layout_constraintStart_toStartOf="@+id/passwordLogin"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/googlebtn"
                    style="@style/WhiteButton"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/google"
                    android:text="@string/continue_with_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/signup_btn"
                    app:layout_constraintHorizontal_bias="0.623"
                    app:layout_constraintStart_toStartOf="@+id/signup_btn"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.742" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/facebookbtn"
                    style="@style/WhiteButton"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/fb"
                    android:drawableEnd="@drawable/baseline_arrow_forward"
                    android:drawablePadding="@dimen/_15sdp"
                    android:text="@string/continue_with_facebook"
                    app:layout_constraintEnd_toEndOf="@+id/googlebtn"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/googlebtn"
                    app:layout_constraintTop_toBottomOf="@+id/googlebtn" />

                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="Forget Password"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
                    app:layout_constraintHorizontal_bias="0.79"
                    app:layout_constraintStart_toStartOf="@+id/passwordLogin"
                    app:layout_constraintTop_toTopOf="@+id/passwordLogin" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>